src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  /* default is "dark mode" */
  :root {
    --color-fill-base: #000000;
    --color-fill-accent: #001f29;
    --color-fill-alternate: #252a2c;
    --color-fill-inverted: #ffffff;
    --color-fill-primary: #0099cc;
    --color-button-fill: #000000;
    --color-button-accent: #ffffff;
    --color-button-accent-primary: #a3a0b0;
    --color-button-accent-secondary: #a3a0b0;
    --color-button-primary: #0099cc;
    --color-button-active: #00171f;
    --color-text-primary: #ffffff;
    --color-text-secondary: #a3a0b0;
    --color-text-danger: #e62c13;
    --color-text-connected: #1ca16c;
    --color-text-connect: #09c;
    --color-fill-connected: #2a5644;
    --color-fill-disconnected: #613b36;
    --color-fill-unselected: #f5f8ff1c;
    --color-chat-accent: #384250;
    --color-border-secondary: #6c737f;
  }
  .light {
    --color-fill-base: #f7f8f8;
    --color-fill-accent: #fff;
    --color-fill-alternate: #eff0f0;
    --color-fill-inverted: #000000;
    --color-fill-primary: #0099cc;
    --color-button-fill: #ebf7fb;
    --color-button-accent: #0099cc;
    --color-button-accent-primary: #bcc4c7;
    --color-button-accent-secondary: #0099cc63;
    --color-button-primary: #ebf7fb;
    --color-button-active: #c8e9f4;
    --color-text-primary: #5e6a70;
    --color-text-secondary: #949ba4;
    --color-text-danger: #e62c13;
    --color-text-connected: #1ca16c;
    --color-text-connect: #09c;
    --color-fill-connected: #c3e4d7;
    --color-fill-disconnected: #f3d7d3;
    --color-fill-unselected: #5e6a7017;
    --color-chat-accent: #dfe1e2;
    --color-border-secondary: #cccfd1;
  }
}
body {
  background: black;
}

#__next {
  width: 100%;
  height: 100dvh;
}

.repeating-square-background {
  background-size: 18px 18px;
  background-repeat: repeat;
  background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='0' width='2' height='2' fill='rgba(255, 255, 255, 0.03)' /%3E%3C/svg%3E");
}

.cursor-animation {
  animation: fadeIn 0.5s ease-in-out alternate-reverse infinite;
}

::-webkit-scrollbar-track {
  background: rgba(255, 255, 255, 0.05);
  border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.1);
  border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555; /* Even lighter grey thumb on hover */
}

::-webkit-scrollbar {
  width: 10px;
  border-radius: 5px;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.button-active {
  svg {
    g {
      rect {
        fill: var(--color-button-active);
      }
    }
  }
}
.header-button-active {
  svg {
    path:first-child {
      fill: var(--color-button-active);
    }
  }
}

.avatar-me {
  background: url("../styles/img/avatar_me.png") lightgray 50% / cover no-repeat;
  height: 2.5rem;
  width: 2.5rem;
}

.avatar-agent {
  background: url("../styles/img/avatar_agent.png") lightgray 50% / cover
    no-repeat;
  height: 2.5rem;
  width: 2.5rem;
}

